feat: list My Studies API
